--- a/preamble.tex
+++ b/preamble.tex
@@ -51,6 +51,9 @@
 \usepackage{bm}
 \usepackage{mathtools}
 
+% custom commands
+\usepackage{rotating}
+\newcolumntype{Y}{>{\centering\arraybackslash}X}
 
 
 
