Updates from ShareLaTeX

--- a/icwe19.bib
+++ b/icwe19.bib
@@ -48,17 +48,6 @@
     isbn      = "978-3-319-60131-1",
     url       = "http://dx.doi.org/10.1007/978-3-319-60131-1{\_}30"
 }
-@ARTICLE {Sousa2018,
-    author   = "Sousa, L. and de Mello, R. and Cedrim, D. and Garcia, A. and Missier, P. and Uch{\^{o}}a, A. and Oliveira, A. and Romanovsky, A.",
-    title    = "{VazaDengue: An information system for preventing and combating mosquito-borne diseases with social networks}",
-    journal  = "Information Systems",
-    year     = "2018",
-    volume   = "75",
-    abstract = "{\textcopyright} 2018 Dengue is a disease transmitted by the Aedes Aegypti mosquito, which also transmits the Zika virus and Chikungunya. Unfortunately, the population of different countries has been suffering from the diseases transmitted by this mosquito. The communities should play an important role in combating and preventing the mosquito-borne diseases. However, due to the limited engagement of the population, new solutions need to be used to strengthen the mosquito surveillance. VazaDengue is one of these solutions, which offers the users a web and mobile platform for preventing and combating mosquito-borne diseases. The system relies on social actions of citizens reporting mosquito breeding sites and dengue cases, in which the reports are made available to the community and health agencies. In order to address the limited population engagement, the system proactively monitors social media network as Twitter to enrich the information provided by the system. It processes the natural language text from the network to classify the tweets according to a set of predefined categories. After the classification, the relevant tweets are provided to the users as reports. In this paper, we describe the VazaDengue features including its ability to harvest and classify tweets. Since the VazaDengue system aims to strengthen the entomological surveillance of the mosquito that transmits Dengue, Zika, and Chikungunya by providing geolocated reports, we present here two studies to evaluate its potential contributions. The first evaluation uses a survey conducted in the Brazilian community of health agents. The goal is to evaluate the relevance of the classified tweets according to the health agents' perspective. The second study compares the official reports of the 2015–2016 epidemic waves in Brazil with the concentration of mosquito-related tweets found by VazaDengue. The goal is to verify if the concentration of tweets can be used for monitoring the mosquito manifestation in big cities. The results of these two evaluations are encouraging. For instance, we have found that the health agents tend to agree with the relevance of the classified tweets. Moreover, the concentration of tweets is likely to be effective for monitoring big cities. The results of these evaluations are helping us to improve the VazaDengue system further. These improvements will make the VazaDengue system even more useful for combating and preventing the mosquito-borne diseases.",
-    doi      = "10.1016/j.is.2018.02.003",
-    issn     = "03064379",
-    keywords = "Dengue,Mosquito,Social media,Surveillance,Tweets"
-}
 @INPROCEEDINGS {Bizid:2015:PUD:2808797.2809411,
     author    = "Bizid, Imen and Nayef, Nibal and Boursier, Patrice and Faiz, Sami and Morcos, Jacques",
     title     = "{Prominent Users Detection During Specific Events by Learning On- and Off-topic Features of User Activities}",
@@ -144,11 +133,11 @@
     keywords = "Evaluation framework,Social influence,Topic communities",
     url      = "http://www.sciencedirect.com/science/article/pii/S0306457314000491"
 }
-@ARTICLE {MEEYOUNG2010,
-    author    = "Meeyoung Cha and Hamed Haddadi and Fabricio Benevenuto and Krishna P. Gummadi",
+@INPROCEEDINGS {Cha2010MeasuringUI,
+    author    = "Meeyoung Cha and Hamed Haddadi and Fabr{\'i}cio Benevenuto and Krishna P. Gummadi",
     title     = "Measuring User Influence in Twitter: The Million Follower Fallacy",
-    year      = "2010",
-    booktitle = "ICWSM"
+    booktitle = "ICWSM",
+    year      = "2010"
 }
 @INPROCEEDINGS {Biran2012,
     author    = "Biran, Or and Rosenthal, Sara and Andreas, Jacob and McKeown, Kathleen and Rambow, Owen",
@@ -260,28 +249,18 @@
     keywords      = "{\#}zika",
     mendeley-tags = "{\#}zika"
 }
-@INPROCEEDINGS {Missier2017,
-    author    = "Missier, Paolo and McClean, Callum and Carlton, Jonathan and Cedrim, Diego and Silva, Leonardo and Garcia, Alessandro and Plastino, Alexandre and Romanovsky, Alexander",
-    title     = "{Recruiting from the Network: Discovering Twitter Users Who Can Help Combat Zika Epidemics}",
-    booktitle = "Web Engineering: 17th International Conference, ICWE 2017, Rome, Italy, June 5-8, 2017, Proceedings",
-    year      = "2017",
-    editor    = "Cabot, Jordi and {De Virgilio}, Roberto and Torlone, Riccardo",
-    pages     = "437--445",
-    address   = "Roma, Italy",
-    publisher = "Springer International Publishing",
-    file      = ":Users/npm65/Library/Application Support/Mendeley Desktop/Downloaded/Missier et al. - 2017 - Recruiting from the Network Discovering Twitter Users Who Can Help Combat Zika Epidemics(2).pdf:pdf",
-    isbn      = "978-3-319-60131-1"
-}
 @ARTICLE {Sousa2018,
-    author  = "Leonardo Sousa and Rafael de Mello and Diego Cedrim and Alessandro Garcia and Paolo Missier and Anderson Uchoa and Anderson Oliveira and Alexander Romanovsky",
-    title   = "VazaDengue: An information system for preventing and combating mosquito-borne diseases with social networks",
-    journal = "Information Systems",
-    year    = "2018",
-    volume  = "75",
-    pages   = "26 - 42",
-    issn    = "0306-4379",
-    doi     = "10.1016/j.is.2018.02.003",
-    url     = "http://www.sciencedirect.com/science/article/pii/S030643791730618X"
+    author   = "Leonardo Sousa and Rafael de Mello and Diego Cedrim and Alessandro Garcia and Paolo Missier and Anderson Uchoa and Anderson Oliveira and Alexander Romanovsky",
+    title    = "VazaDengue: An information system for preventing and combating mosquito-borne diseases with social networks",
+    journal  = "Information Systems",
+    year     = "2018",
+    volume   = "75",
+    pages    = "26 - 42",
+    issn     = "0306-4379",
+    doi      = "10.1016/j.is.2018.02.003",
+    url      = "http://www.sciencedirect.com/science/article/pii/S030643791730618X",
+    keywords = "Dengue,Mosquito,Social media,Surveillance,Tweets"
+
 }
 @ARTICLE {doi:10.1080/14742830701497277,
     author    = "Chris Bobel",
@@ -416,7 +395,6 @@
     publisher = "Springer International Publishing",
     year      = "2017",
     address   = "Cham",
-    editor    = "Missaoui, Rokiaand Abdessalem, Taleland Latapy, Matthieu",
     booktitle = "Trends in Social Network Analysis: Information Propagation, User Behavior Modeling, Forecasting, and Vulnerability Assessment",
     pages     = "1--19",
     abstract  = "Networks describe a range of social, biological and technical phenomena. An important property of a network is its degree correlation or assortativity, describing how nodes in the network associate based on their number of connections. Social networks are typically thought to be distinct from other networks in being assortative (possessing positive degree correlations); well-connected individuals associate with other well-connected individuals, and poorly connected individuals associate with each other. We review the evidence for this in the literature and find that, while social networks are more assortative than non-social networks, only when they are built using group-based methods do they tend to be positively assortative. Non-social networks tend to be disassortative. We go on to show that connecting individuals due to shared membership of a group, a commonly used method, biases towards assortativity unless a large enough number of censuses of the network are taken. We present a number of solutions to overcoming this bias by drawing on advances in sociological and biological fields. Adoption of these methods across all fields can greatly enhance our understanding of social networks and networks in general.",
