--- a/icwe19.bib
+++ b/icwe19.bib
@@ -132,7 +132,7 @@
 @ARTICLE {Kardara2015,
     author   = "Kardara, Magdalini and Papadakis, George and Papaoikonomou, Athanasios and Tserpes, Konstantinos and Varvarigou, Theodora",
     title    = "{Large-scale evaluation framework for local influence theories in Twitter}",
-    journal  = "Information Processing {\\&} Management",
+    journal  = "Information Processing {\&} Management",
     year     = "2015",
     volume   = "51",
     number   = "1",
@@ -217,7 +217,7 @@
 @ARTICLE {Poell2014,
     author    = "Poell, Thomas",
     title     = "{Social media and the transformation of activist communication: exploring the social media ecology of the 2010 Toronto G20 protests}",
-    journal   = "Information, Communication {\\&} Society",
+    journal   = "Information, Communication {\&} Society",
     year      = "2014",
     volume    = "17",
     number    = "6",
@@ -308,7 +308,7 @@
 @ARTICLE {doi:10.1080/1369118X.2013.812674,
     author    = "Thomas Poell ",
     title     = "Social media and the transformation of activist communication: exploring the social media ecology of the 2010 Toronto G20 protests",
-    journal   = "Information, Communication \\\& Society",
+    journal   = "Information, Communication \& Society",
     year      = "2014",
     volume    = "17",
     number    = "6",
@@ -421,6 +421,6 @@
     pages     = "1--19",
     abstract  = "Networks describe a range of social, biological and technical phenomena. An important property of a network is its degree correlation or assortativity, describing how nodes in the network associate based on their number of connections. Social networks are typically thought to be distinct from other networks in being assortative (possessing positive degree correlations); well-connected individuals associate with other well-connected individuals, and poorly connected individuals associate with each other. We review the evidence for this in the literature and find that, while social networks are more assortative than non-social networks, only when they are built using group-based methods do they tend to be positively assortative. Non-social networks tend to be disassortative. We go on to show that connecting individuals due to shared membership of a group, a commonly used method, biases towards assortativity unless a large enough number of censuses of the network are taken. We present a number of solutions to overcoming this bias by drawing on advances in sociological and biological fields. Adoption of these methods across all fields can greatly enhance our understanding of social networks and networks in general.",
     isbn      = "978-3-319-53420-6",
-    doi       = "10.1007/978-3-319-53420-6_1",
-    url       = "https://doi.org/10.1007/978-3-319-53420-6_1"
+    doi       = "10.1007/978-3-319-53420-6\_1",
+    url       = "https://doi.org/10.1007/978-3-319-53420-6\_1"
 }
