fixed tables and sections

--- a/icwe19.bib
+++ b/icwe19.bib
@@ -378,7 +378,7 @@
     url     = "https://journals.uic.edu/ojs/index.php/fm/article/view/4366"
 }
 @ARTICLE {LU2016,
-    author  = "L{\\\"u}, Linyuan and Zhou, Tao and Zhang, Qian-Ming and Stanley, H. Eugene",
+    author  = "L{\"u}, Linyuan and Zhou, Tao and Zhang, Qian-Ming and Stanley, H. Eugene",
     title   = "The H-index of a network node and its relation to degree and coreness",
     journal = "Nature Communications",
     year    = "2016",
