New diagram for the framework, demon vs infomap table, fix typos and references

--- a/preamble.tex
+++ b/preamble.tex
@@ -17,7 +17,6 @@
 }
 
 \usepackage{tabularx}
-\usepackage{graphicx}
 \usepackage{array}
 \usepackage{booktabs} % for nice rules/lines in tables
 \usepackage{arydshln} % for dashed lines in tables
@@ -53,7 +52,5 @@
 
 % custom commands
 \usepackage{rotating}
+\newcolumntype{P}[1]{>{\centering\arraybackslash}p{#1}}
 \newcolumntype{Y}{>{\centering\arraybackslash}X}
-
-
-
