--- a/tables/contexts.tex
+++ b/tables/contexts.tex
@@ -1,8 +1,7 @@
-%\begin{tabularx}{\textwidth}{|X|X|X|X|X|Y|Y|Y|Y|Y|}
-\begin{tabularx}{\textwidth}{|X|p{1.8cm}|p{1.2cm}|p{1.1cm}|p{1.4cm}|p{1.2cm}|p{1.3cm}|p{1.1cm}|}
+\begin{tabularx}{\textwidth}{|X|P{1.8cm}|P{1.2cm}|P{1cm}|P{1.4cm}|P{1.2cm}|P{1.3cm}|P{1cm}|}
 
 \hline
-\textbf{Context name} & \textbf{Period} & \textbf{Nodes} & \textbf{Edges} & \textbf{Density} & \textbf{Avg \newline degree} & \textbf{Assor-tativity} & \textbf{Scc / nodes} \\ \hline
+\textbf{Context name} & \textbf{Period} & \textbf{Nodes} & \textbf{Edges} & \textbf{Density} & \textbf{Avg degree} & \textbf{Assor-tativity} & \textbf{Scc / nodes} \\ \hline
 16 days of action & 2018-11-25 / 2018-12-10 & 396 & 349 & 0.002 & 1.8 & -0.1 & 1.0 \\ \hline
 Elf day & 2018-12-03 / 2018-12-12 & 365 & 436 & 0.003 & 2.4 & -0.2 & 1.0 \\ \hline
 Dry january & 2018-01-01 / 2018-01-31 & 235 & 234 & 0.004 & 2.0 & -0.3 & 1.0 \\ \hline
