--- a/tables/repeat-users.tex
+++ b/tables/repeat-users.tex
@@ -1,4 +1,4 @@
-\begin{tabularx}{\textwidth}{|X|X|X|X|}
+\begin{tabularx}{\textwidth}{|p{2.5cm}|X|P{2.4cm}|P{2.4cm}|}
 \hline
 \textbf{Username} & \textbf{Name} & \textbf{Follower rank} & \textbf{Participations} \\ \hline
 alzheimerssoc & Alzheimer's Society & 0.99 & 4 \\ \hline
@@ -6,7 +6,7 @@ dementiauk & Dementia UK & 0.98 & 4 \\ \hline
 mentalhealth & Mental Health Fdn & 0.97 & 3 \\ \hline
 colesmillerllp & Coles Miller LLP & 0.65 & 3 \\ \hline
 rdash\_nhs & RDaSH NHS FT & 0.88 & 2 \\ \hline
-alzsocseengland & Alzheimer's Society - South East England & 0.64 & 2 \\ \hline
+alzsocseengland & Alzheimer's Society - South ... & 0.64 & 2 \\ \hline
 jeremy\_hunt & Jeremy Hunt & 1.0 & 2 \\ \hline
 nhsengland & NHS England & 0.99 & 2 \\ \hline
 carersuk & Carers UK & 0.95 & 2 \\ \hline
