fix typo in table 2

--- a/tables/demon-vs-infomap.tex
+++ b/tables/demon-vs-infomap.tex
@@ -4,5 +4,5 @@
 Degenerated context ratio & 0.52 & 0.0 \\ \hline
 Avg communities per good context & 1.92 & 18.88 \\ \hline
 Avg sociable users ratio & 0.06 & 0.59 \\ \hline
-Repeat kept users ratio & 0.28 & 0.37 \\ \hline
+Kept repeat users ratio & 0.28 & 0.37 \\ \hline
 \end{tabularx}
